# streamlit_respect

./: About.py  main.py  pyproject.toml  requirements.txt
pages/: 1_Data_Upload.py  2_Select_Columns.py  3_Modify_Data.py  4_Plot_Data.py  5_Run_ReSpect.py  6_Download_ZIP.py
