[project]
name = "streamlit-respect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datetime>=6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "streamlit>=1.59.0",
]
